--- a/p2p-media-loader-core/package.json
+++ b/p2p-media-loader-core/package.json
@@ -28,6 +28,7 @@
     "minify": "terser ./build/p2p-media-loader-core.js -m -c > ./build/p2p-media-loader-core.min.js",
     "build": "npm run compile && npm run browserify && npm run minify",
     "webpack:build": "webpack --progress -c webpackfile.js",
+    "wb": "webpack --progress -c webpackfile.js",
     "webpack:watch": "webpack --watch --progress -c webpackfile.js",
     "lint": "eslint . --ext .ts",
     "test": "TS_NODE_PROJECT=tsconfig.test.json TS_NODE_CACHE=false mocha -r ts-node/register test/*.test.ts"
